--- a/BlackJack_Uebung/.project
+++ b/BlackJack_Uebung/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BlackJack_fHA</name>
+	<name>BlackJack_Uebung</name>
 	<comment></comment>
 	<projects>
 	</projects>
